k8s-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywallet-backend
  labels:
    app: mywallet-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mywallet-backend
  template:
    metadata:
      labels:
        app: mywallet-backend
    spec:
      containers:
      - name: backend
        image: mywallet.azurecr.io/mywallet-backend:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mywallet-backend-service
spec:
  type: ClusterIP # Change back to internal since Ingress handles the public access
  selector:
    app: mywallet-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
